# obsidianbackuper

./: Cargo.toml  obsbackupsetting.txt  obsbackuptoken.txt  readme.md
src/: bots.rs  dir.rs  get.rs  main.rs
