[package]
name = "obsidianbackuper"
version = "0.0.1"
edition = "2024"

[dependencies]
fs_extra = "1.3"
zip = "7.0"
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
powershell_script = "1.1.0"
